# fomosto-qseis2d

./: .gitignore  .travis.yml  Makefile.am  README  README.md  configure.ac
examples/: qsr_example.inp  qss_example.inp
src/r/: Makefile.am  banddpasss.f  bessj.f  qsram2ve.f  qsrbsj.f  qsrfftinv.f  qsrglobal.h  qsrhksh.f  qsrkern.f  qsrlayer.f  qsrmain.f  qsrpsv.f  qsrqmodel.f  qsrsh.f  qsrsublay.f  qsrtest.f  qsrve2am.f  qsrwavelet.f  qsrwaveno.f  qsrwvint.f
src/s/: Makefile.am  getdata.f  qssam2ve.f  qssgetinp.f  qssglobal.h  qsshksh.f  qsskern.f  qsslayer.f  qssmain.f  qsspsv.f  qssqmodel.f  qsssh.f  qsssource.f  qsssublay.f  qssve2am.f  qsswaveno.f  qsswvint.f
