#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT([fomosto-qseis2d], [2014])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_PROG_F77
AC_CONFIG_FILES([
                 Makefile
                 src/s/Makefile
                 src/r/Makefile
                 ])
AC_OUTPUT
