bin_PROGRAMS = fomosto_qseisR2014
fomosto_qseisR2014_SOURCES = banddpasss.f bessj0.f bessj1.f bessj.f caxcb.f cdgemp.f cmemcpy.f disazi.f four1.f getdata.f qsram2ve.f qsrbsj.f qsrfftinv.f qsrglobal.h qsrhksh.f qsrkern.f qsrlayer.f qsrmain.f qsrpsv.f qsrqmodel.f qsrsh.f qsrsublay.f qsrtest.f qsrve2am.f qsrwavelet.f qsrwaveno.f qsrwvint.f taper.f
